--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + TS</title>
+  <script>
+    if (window.location.search.includes('redirect=')) {
+      let redirectPath = window.location.search.split('redirect=')[1];
+      history.replaceState(null, '', redirectPath);
+    }
+  </script>
 </head>
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.ts"></script>
+  <script type="module" src="./src/main.ts"></script>
 </body>
 
 </html>
